--- a/DevX/DevX.PerformanceTest/MainWindow.xaml
+++ b/DevX/DevX.PerformanceTest/MainWindow.xaml
@@ -46,7 +46,9 @@
             <ContentControl>
                 <dxg:GridColumn>
                     <dxg:GridColumn.EditSettings>
-                        <dxe:ComboBoxEditSettings ItemsSource="{Binding ItemsSource}"/>
+                        <dxe:ComboBoxEditSettings
+                            IsTextEditable="False"
+                            ItemsSource="{Binding ItemsSource}"/>
                     </dxg:GridColumn.EditSettings>
                 </dxg:GridColumn>
             </ContentControl>
@@ -58,6 +60,8 @@
             <TextBox Name="SearchTextBox" MinWidth="100" HorizontalAlignment="Left" VerticalAlignment="Top" 
                  Text="{Binding SearchString, ElementName=MyTableView, UpdateSourceTrigger=PropertyChanged, Delay=300}" Margin="0,0,0,0" Height="20" />
             <Button Content="Show/Hide" Click="Button_Click" />
+            <Button Content="Save" Click="SaveButton_Click" />
+            <Button Content="Restore" Click="RestoreButton_Click" />
         </StackPanel>
         <dxg:GridControl HorizontalAlignment="Left" VerticalAlignment="Top" 
                      x:Name="ListGrid" Margin="0,20,0,0"
