--- a/DevX/DevX.PerformanceTest/MainWindow.xaml
+++ b/DevX/DevX.PerformanceTest/MainWindow.xaml
@@ -1,111 +1,121 @@
 ﻿<dx:ThemedWindow x:Class="DevX.PerformanceTest.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
-        xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
-        xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-        xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
-        xmlns:dxci="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"
-        xmlns:local="clr-namespace:DevX.PerformanceTest"
-        Title="MainWindow" WindowState="Maximized">
-    <dx:ThemedWindow.Resources>
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+		xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
+		xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
+		xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
+		xmlns:dxci="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"
+		xmlns:local="clr-namespace:DevX.PerformanceTest"
+		xmlns:mvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+		Title="MainWindow" WindowState="Maximized">
+	<dx:ThemedWindow.Resources>
 
-        <local:ColumnTemplateSelector x:Key="ColumnTemplateSelector"/>
-        <Style TargetType="dxg:GridColumn">
-            <Setter Property="FilterPopupMode" Value="CheckedList"/>
-            <Setter Property="FieldName" Value="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).FieldName, RelativeSource={RelativeSource Self}}"/>
-            <Setter Property="Header" Value="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).Header, RelativeSource={RelativeSource Self}}"/>
-            <Setter Property="Width" Value="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).Width, RelativeSource={RelativeSource Self}}"/>
-        </Style>
+		<local:ColumnTemplateSelector x:Key="ColumnTemplateSelector"/>
+		<Style TargetType="dxg:GridColumn">
+			<Setter Property="FilterPopupMode" Value="CheckedList"/>
+			<Setter Property="FieldName" Value="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).FieldName, RelativeSource={RelativeSource Self}}"/>
+			<Setter Property="Header" Value="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).Header, RelativeSource={RelativeSource Self}}"/>
+			<Setter Property="Width" Value="{Binding Path=(dxci:DependencyObjectExtensions.DataContext).Width, RelativeSource={RelativeSource Self}}"/>
+		</Style>
 
-        <DataTemplate x:Key="DefaultColumnTemplate">
-            <ContentControl>
-                <dxg:GridColumn />
-            </ContentControl>
-        </DataTemplate>
-        <DataTemplate x:Key="TwoStateCheckBoxColumnTemplate">
-            <ContentControl>
-                <dxg:GridColumn>
-                    <dxg:GridColumn.EditSettings>
-                        <dxe:CheckEditSettings IsThreeState="False" />
-                    </dxg:GridColumn.EditSettings>
-                </dxg:GridColumn>
-            </ContentControl>
-        </DataTemplate>
-        <DataTemplate x:Key="ThreeStateCheckBoxColumnTemplate">
-            <ContentControl>
-                <dxg:GridColumn>
-                    <dxg:GridColumn.EditSettings>
-                        <dxe:CheckEditSettings IsThreeState="True" />
-                    </dxg:GridColumn.EditSettings>
-                </dxg:GridColumn>
-            </ContentControl>
-        </DataTemplate>
+		<DataTemplate x:Key="DefaultColumnTemplate">
+			<ContentControl>
+				<dxg:GridColumn />
+			</ContentControl>
+		</DataTemplate>
+		<DataTemplate x:Key="TwoStateCheckBoxColumnTemplate">
+			<ContentControl>
+				<dxg:GridColumn>
+					<dxg:GridColumn.EditSettings>
+						<dxe:CheckEditSettings IsThreeState="False" />
+					</dxg:GridColumn.EditSettings>
+				</dxg:GridColumn>
+			</ContentControl>
+		</DataTemplate>
+		<DataTemplate x:Key="ThreeStateCheckBoxColumnTemplate">
+			<ContentControl>
+				<dxg:GridColumn>
+					<dxg:GridColumn.EditSettings>
+						<dxe:CheckEditSettings IsThreeState="True" />
+					</dxg:GridColumn.EditSettings>
+				</dxg:GridColumn>
+			</ContentControl>
+		</DataTemplate>
 
-        <DataTemplate x:Key="ComboBoxColumnTemplate">
-            <ContentControl>
-                <dxg:GridColumn>
-                    <dxg:GridColumn.EditSettings>
-                        <dxe:ComboBoxEditSettings
-                            IsTextEditable="False"
-                            ItemsSource="{Binding ItemsSource}"/>
-                    </dxg:GridColumn.EditSettings>
-                </dxg:GridColumn>
-            </ContentControl>
-        </DataTemplate>
-    </dx:ThemedWindow.Resources>
+		<DataTemplate x:Key="ComboBoxColumnTemplate">
+			<ContentControl>
+				<dxg:GridColumn>
+					<dxg:GridColumn.EditSettings>
+						<dxe:ComboBoxEditSettings
+							IsTextEditable="False"
+							ItemsSource="{Binding ItemsSource}"/>
+					</dxg:GridColumn.EditSettings>
+				</dxg:GridColumn>
+			</ContentControl>
+		</DataTemplate>
+	</dx:ThemedWindow.Resources>
 
-    <Grid>
-        <StackPanel Orientation="Horizontal" Height="30" VerticalAlignment="Top">
-            <TextBox Name="SearchTextBox" MinWidth="100" HorizontalAlignment="Left" VerticalAlignment="Top" 
-                 Text="{Binding SearchString, ElementName=MyTableView, UpdateSourceTrigger=PropertyChanged, Delay=300}" Margin="0,0,0,0" Height="20" />
-            <Button Content="Show/Hide" Click="Button_Click" />
-            <Button Content="Save" Click="SaveButton_Click" />
-            <Button Content="Restore" Click="RestoreButton_Click" />
-        </StackPanel>
-        <dxg:GridControl HorizontalAlignment="Left" VerticalAlignment="Top" 
-                     x:Name="ListGrid" Margin="0,20,0,0"
-                     ItemsSource="{Binding GridData}"  
-                         ColumnsSource="{Binding Columns}" 
-                         ColumnGeneratorTemplateSelector="{StaticResource ColumnTemplateSelector}"
-                         ShowAllTableValuesInCheckedFilterPopup="False"
-                         ShowAllTableValuesInFilterPopup="False" >
-            <!--<dxg:GridControl.Columns>
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Id"     FieldName="Id.Data"         />
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Active" FieldName="Active.Data"     >
-                    <dxg:GridColumn.EditSettings>
-                        <dxe:CheckEditSettings IsThreeState="False" />
-                    </dxg:GridColumn.EditSettings>
-                </dxg:GridColumn>
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Active" FieldName="Active.Data"     >
-                    <dxg:GridColumn.EditSettings>
-                        <dxe:CheckEditSettings IsThreeState="True" />
-                    </dxg:GridColumn.EditSettings>
-                </dxg:GridColumn>
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop01" FieldName="Prop01.Data"     />
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop02" FieldName="Prop02.Data"     />
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop03" FieldName="Prop03.Data"     />
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop04" FieldName="Prop04.Data"     />
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop05" FieldName="Prop05.Data"     />
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop06" FieldName="Prop06.Data"     />
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop07" FieldName="Prop07.Data"     />
-                <dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop08" FieldName="Prop08.Data"     />
-            </dxg:GridControl.Columns>-->
-            <dxg:GridControl.View>
-                <dxg:TableView Name="MyTableView"
-                               AllowEditing="True"
-                               AllowColumnMoving="True"
-                               ShowSearchPanelMode="Never"
-                               IsColumnMenuEnabled="False" ShowAutoFilterRow="True"
-                               ShowGroupPanel="True"
-                               ShowGroupedColumns="True"
-                               IsColumnChooserVisible="{Binding ShowCloumnChooser, Mode=TwoWay}"
-                >
-
-                </dxg:TableView>
-            </dxg:GridControl.View>
-        </dxg:GridControl>
-
-        <!--ColumnsSource="{Binding Columns}"-->
-    </Grid>
+	<Grid>
+		<StackPanel Orientation="Horizontal" Height="30" VerticalAlignment="Top">
+			<TextBox Name="SearchTextBox" MinWidth="100" HorizontalAlignment="Left" VerticalAlignment="Top" 
+				 Text="{Binding SearchString, ElementName=MyTableView, UpdateSourceTrigger=PropertyChanged, Delay=300}" Margin="0,0,0,0" Height="20" />
+			<Button Content="Show/Hide" Click="Button_Click" />
+			<Button Content="Save" Click="SaveButton_Click" />
+			<Button Content="Restore" Click="RestoreButton_Click" />
+		</StackPanel>
+		<Popup  x:Name="MyPopup" StaysOpen="False"  IsOpen="{Binding IsOpen}" PlacementTarget="{Binding FocusedElement}">
+			<Border BorderBrush="Black" BorderThickness="1" Background="LightYellow">
+				<CheckBox Content="This is a popup"/>
+			</Border>
+		</Popup>
+		<dxg:GridControl HorizontalAlignment="Left" VerticalAlignment="Top" 
+					 x:Name="ListGrid" Margin="0,20,0,0"
+					 ItemsSource="{Binding GridData}"  
+						 ColumnsSource="{Binding Columns}" 
+						 ColumnGeneratorTemplateSelector="{StaticResource ColumnTemplateSelector}"
+						 ShowAllTableValuesInCheckedFilterPopup="False"
+						 ShowAllTableValuesInFilterPopup="False" >
+			<!--<dxg:GridControl.Columns>
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Id"     FieldName="Id.Data"         />
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Active" FieldName="Active.Data"     >
+					<dxg:GridColumn.EditSettings>
+						<dxe:CheckEditSettings IsThreeState="False" />
+					</dxg:GridColumn.EditSettings>
+				</dxg:GridColumn>
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Active" FieldName="Active.Data"     >
+					<dxg:GridColumn.EditSettings>
+						<dxe:CheckEditSettings IsThreeState="True" />
+					</dxg:GridColumn.EditSettings>
+				</dxg:GridColumn>
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop01" FieldName="Prop01.Data"     />
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop02" FieldName="Prop02.Data"     />
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop03" FieldName="Prop03.Data"     />
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop04" FieldName="Prop04.Data"     />
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop05" FieldName="Prop05.Data"     />
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop06" FieldName="Prop06.Data"     />
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop07" FieldName="Prop07.Data"     />
+				<dxg:GridColumn AllowGrouping="True" AllowSorting="True" Header="Prop08" FieldName="Prop08.Data"     />
+			</dxg:GridControl.Columns>-->
+			<dxg:GridControl.View>
+				<dxg:TableView Name="MyTableView"
+							   AllowEditing="True"
+							   AllowColumnMoving="True"
+							   ShowSearchPanelMode="Never"
+							   IsColumnMenuEnabled="False" ShowAutoFilterRow="True"
+							   ShowGroupPanel="True"
+							   ShowGroupedColumns="True"
+							   IsColumnChooserVisible="{Binding ShowCloumnChooser, Mode=TwoWay}"
+				>
+					<mvvm:Interaction.Triggers>
+						<mvvm:KeyToCommand KeyGesture="Ctrl+Space"
+																	 EventName="KeyDown"
+																	 Command="{Binding IntellisenceCommand}"
+																	 MarkRoutedEventsAsHandled="True" />
+					</mvvm:Interaction.Triggers>
+				</dxg:TableView>
+			</dxg:GridControl.View>
+		</dxg:GridControl>
+		<!--ColumnsSource="{Binding Columns}"-->
+	</Grid>
 </dx:ThemedWindow>
