custom grid classes

--- a/DevX/ProgramList.DevX.Final/ProgramListView.xaml
+++ b/DevX/ProgramList.DevX.Final/ProgramListView.xaml
@@ -5,19 +5,19 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:My="clr-namespace:ProgramList.DevX.Final"
              xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
-             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm" 
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              x:Class="ProgramList.DevX.Final.ProgramListView"
              xmlns:dxci="http://schemas.devexpress.com/winfx/2008/xaml/core/internal"          
              mc:Ignorable="d" 
              Width="auto"
              d:DesignHeight="300" d:DesignWidth="300"
     >
-    <dxg:GridControl x:Name="ListGrid" 
+    <My:ListGrid x:Name="ListGrid" 
                      ItemsSource="{Binding Path=GridData}" 
                      ColumnsSource="{Binding Columns}"
                      SelectionMode="Row">
-        <dxg:GridControl.View>
-            <dxg:TableView 
+        <My:ListGrid.View>
+            <My:ListView 
                 AllowPerPixelScrolling="True" 
                 ShowTotalSummary="True" 
                 BestFitArea="Header" 
@@ -29,13 +29,7 @@
                 ShowAutoFilterRow="True"
                 ShowSearchPanelMode="Always"
                 />
-        </dxg:GridControl.View>
+        </My:ListGrid.View>
 
-        <dxmvvm:Interaction.Behaviors>
-            <dxmvvm:EventToCommand EventName="CurrentColumnChanged" Command="{Binding CurrentColumnChangedCommand}" PassEventArgsToCommand="True" />
-            <dxmvvm:EventToCommand EventName="CurrentItemChanged" Command="{Binding CurrentRowChangedCommand}" PassEventArgsToCommand="True" />
-            <dxmvvm:EventToCommand EventName="PreviewKeyDown" Command="{Binding PreviewKeyDownCommand}" PassEventArgsToCommand="True" />
-        </dxmvvm:Interaction.Behaviors>
-
-    </dxg:GridControl>
+    </My:ListGrid>
 </UserControl>
