Initial working version of final

--- a/DevX/ProgramList.DevX.Final/App.xaml
+++ b/DevX/ProgramList.DevX.Final/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:ProgramList.DevX.Final"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/ProgramList.DevX.Final;component/DevExpressGridDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
