Load resources at start

--- a/DevX/ProgramList.DevX.Final/MainWindow.xaml
+++ b/DevX/ProgramList.DevX.Final/MainWindow.xaml
@@ -14,15 +14,21 @@
         <viewmodels:ProgramListViewModel x:Name="ViewModel" />
     </dx:DXWindow.DataContext>
     <Grid>
+        <dxg:GridControl Height="0" x:Name="DummyGridToLoadResources">
+            <dxg:GridControl.Columns>
+                <dxg:GridColumn/>
+            </dxg:GridControl.Columns>
+
+        </dxg:GridControl>
         <StackPanel VerticalAlignment="Top" Height="40" Orientation="Horizontal" Grid.Row="0" Margin="0,5,0,0">
-            <TextBox PreviewTextInput="NumberValidationTextBox" x:Name="ColumnCount" Text="10" Width="50" Margin="5,0,0,0" />
-            <Button x:Name="InitGrid" Content="Add" Margin="5,0,0,0" Click="InitGrid_Click" />
-            <Button x:Name="Bestfit" Content="Bestfit" Margin="5,0,0,0" Click="Bestfit_Click"  />
-            <Button x:Name="ClearGrid" Content="Clear Columns" Margin="5,0,0,0" Click="ClearGrid_Click" />
+            <Button x:Name="NewGrid" Content="New Grid" Margin="5,0,5,0" Click="NewGrid_Click" />
+            <TextBox PreviewTextInput="NumberValidationTextBox" x:Name="ColumnCount" Text="10" Width="50" Margin="15,0,0,0" />
+            <Button x:Name="InitGrid" Content="Add Columns" Margin="0,0,15,0" Click="InitGrid_Click" IsEnabled="False" />
+            <Button x:Name="Bestfit" Content="Bestfit" Margin="5,0,0,0" Click="Bestfit_Click" IsEnabled="False" />
+            <Button x:Name="ClearGrid" Content="Clear Columns" Margin="5,0,0,0" Click="ClearGrid_Click" IsEnabled="False" />
             <!--<Button x:Name="LoadGrid" Content="Load" Margin="5,0,0,0"  Click="LoadGrid_Click" />-->
         </StackPanel>
         <Border x:Name="PlaceHolder" VerticalAlignment="Top" Margin="2,42,2,2" Background="Red" >
-            <final:ProgramListView x:Name="MyProgramList" DataContext="{Binding}" />
         </Border>
     </Grid>
 </dx:DXWindow>
